--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,7 +20,7 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER
-    - title: My site
+    - title: HeckerDev.net
       href: https://heckerdev.net/
 
 # Upptime also supports notifications, assigning issues, and more
