--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,23 +5,25 @@ repo: upptime # The name of this repository
 sites:
   - name: HeckerDev.net
     url: https://heckerdev.net
+  - name: MangaHD.net
+    url: https://mangahd.net
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.heckerdev.net
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://heckerdev.net/favicon.png
   name: HeckerDev Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "HeckerDev Site Status"
+  introMessage: "Live uptime and availability tracking for websites owned by HeckerDev."
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER
     - title: HeckerDev.net
       href: https://heckerdev.net/
+    - title: MangaHD.net
+      href: https://mangahd.net/
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
