--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,7 @@ repo: upptime # The name of this repository
 sites:
   - name: HeckerDev.net
     url: https://heckerdev.net
+    icon: https://heckerdev.net/favicon.png
   - name: MangaHD.net
     url: https://mangahd.net
 
@@ -13,7 +14,9 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.heckerdev.net
   # baseUrl: /your-repo-name
+  favicon: https://heckerdev.net/favicon.png
   logoUrl: https://heckerdev.net/favicon.png
+  themeUrl: https://status.heckerdev.net/darkhd.css
   name: HeckerDev Status
   introTitle: "HeckerDev Site Status"
   introMessage: "Live uptime and availability tracking for websites owned by HeckerDev."
