--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,12 @@ repo: upptime # The name of this repository
 sites:
   - name: HeckerDev.net
     url: https://heckerdev.net
-    slug: hacker-dev-net
+    slug: hecker-dev-net
     icon: https://heckerdev.net/favicon.png
+  - name: heckr.dev
+    url: https://heckr.dev
+    slug: heckr-dev
+    icon: https://heckr.dev/favicon.png
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -24,6 +28,8 @@ status-website:
       href: /
     - title: HeckerDev.net
       href: https://status.heckerdev.net/history/hecker-dev-net
+    - title: heckr.dev
+      herf: https://status.heckerdev.net/history/heckr-dev
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
