--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,14 @@ owner: hecker-01 # Your GitHub organization or username, where this repository l
 repo: upptime # The name of this repository
 
 sites:
-  - name: Heckerdev.net
-    url: https://heckerdev.net
-    slug: heckerdev-net
-    icon: https://heckerdev.net/favicon.png
   - name: heckr.dev
     url: https://heckr.dev
     slug: heckr-dev
     icon: https://heckr.dev/favicon.png
+  - name: Heckerdev.net
+    url: https://heckerdev.net
+    slug: heckerdev-net
+    icon: https://heckerdev.net/favicon.png
   - name: satisSuite
     url: https://satissuite.heckr.dev
     slug: satis-suite
@@ -19,21 +19,21 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: status.heckerdev.net
+  cname: status.heckr.dev
   # baseUrl: /your-repo-name
   favicon: https://heckr.dev/favicon.png
   logoUrl: https://heckr.dev/favicon.png
-  themeUrl: https://status.heckerdev.net/catppuccin-mocha.css
-  name: Heckerdev Status
-  introTitle: "Heckerdev Site Status"
-  introMessage: "Live uptime and availability tracking for websites owned by Heckerdev."
+  themeUrl: https://status.heckr.dev/catppuccin-mocha.css
+  name: heckr.dev status
+  introTitle: "heckr.dev site status"
+  introMessage: "Live uptime and availability tracking for websites owned by heckerdev."
   navbar:
     - title: Status
       href: /
-    - title: Heckerdev.net
-      href: https://status.heckerdev.net/history/hecker-dev-net
     - title: heckr.dev
       href: https://status.heckerdev.net/history/heckr-dev
+    - title: heckerdev.net
+      href: https://status.heckerdev.net/history/hecker-dev-net
     - title: satisSuite
       href: https://status.heckerdev.net/history/satis-suite
 
